# dvx

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PORTING_PLAN.md  README.md  README.rst  ROADMAP.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarks.yaml  build.yaml  ci.yml  test-publish.yml  tests.yaml
docs/: MULTI_OUTPUT.md
dvc/: __init__.py  _debug.py  analytics.py  build.py  cachemgr.py  compare.py  config.py  config_schema.py  daemon.py  dagascii.py  data_cloud.py  database.py  dirs.py  dvcfile.py  exceptions.py  ignore.py  info.py  lock.py  logger.py  output.py  pathspec_math.py  progress.py  prompt.py  rwlock.py  schema.py  scm.py  types.py  updater.py
dvc/__pyinstaller/: hook-celery.py
dvc/api/: __init__.py  artifacts.py  data.py  dataset.py  experiments.py  scm.py  show.py
dvc/cli/: __init__.py  completion.py  main.py  parser.py
dvc/commands/: artifacts.py  cache.py  cat.py  check_ignore.py  checkout.py  commit.py  config.py  content_diff.py  data.py  data_sync.py  dataset.py  destroy.py  diff.py  du.py  fsck.py  gc.py  get.py  get_url.py  imp.py  imp_url.py  init.py  install.py  metrics.py  params.py  plots.py  remote.py  remove.py  repro.py  run.py  stage.py  status.py  studio.py  update.py  version.py
dvc/dependency/: __init__.py  dataset.py  db.py  param.py  repo.py
dvc/fs/: __init__.py  callbacks.py  data.py  dvc.py  git.py
dvc/parsing/: __init__.py  context.py  interpolate.py
dvc/render/: match.py
dvc/repo/: __init__.py  add.py  artifacts.py  brancher.py  checkout.py  collect.py  commit.py  data.py  datasets.py  diff.py  du.py  fetch.py  gc.py  get.py  graph.py  imp.py  imp_db.py  imp_url.py  index.py  init.py  ls.py  move.py  open_repo.py  pull.py  push.py  reproduce.py  scm_context.py  stage.py  status.py  update.py  worktree.py
dvc/run/: __init__.py  artifact.py  dvc_files.py  executor.py  status.py
dvc/stage/: __init__.py  cache.py  exceptions.py  imports.py  loader.py  serialize.py  utils.py
dvc/testing/: README.rst  api_tests.py  fixtures.py  path_info.py  remote_tests.py  tmp_dir.py  workspace_tests.py
dvc/ui/: __init__.py  pager.py  table.py
dvc/utils/: __init__.py  collections.py  humanize.py  hydra.py  packaging.py  plots.py  strictyaml.py  studio.py  table.py  threadpool.py
dvx/: __init__.py  __main__.py  _debug.py  _version.py  annotations.py  build.py  cachemgr.py  cli.py  config.py  config_schema.py  dagascii.py  data_cloud.py  database.py  dirs.py  dvcfile.py  exceptions.py  ignore.py  info.py  lock.py  logger.py  output.py  pathspec_math.py  progress.py  prompt.py  rwlock.py  schema.py  scm.py  types.py
dvx/api/: __init__.py  data.py  scm.py
dvx/cli/: __init__.py  command.py  completion.py  main.py  parser.py  utils.py
dvx/commands/: add.py  cache.py  cat.py  check_ignore.py  checkout.py  commit.py  completion.py  config.py  content_diff.py  data.py  data_sync.py  destroy.py  diff.py  du.py  fsck.py  gc.py  get.py  get_url.py  git_hook.py  imp.py  imp_db.py  imp_url.py  init.py  install.py  ls_url.py  move.py  remote.py  remove.py  root.py  run.py  status.py  unprotect.py  update.py  version.py
dvx/dependency/: __init__.py  base.py  dataset.py  db.py  param.py  repo.py
dvx/fs/: __init__.py  callbacks.py  data.py  dvc.py  git.py
dvx/parsing/: __init__.py  context.py  interpolate.py
dvx/repo/: __init__.py  add.py  brancher.py  checkout.py  collect.py  commit.py  data.py  destroy.py  diff.py  du.py  fetch.py  gc.py  get.py  get_url.py  graph.py  imp_db.py  imp_url.py  index.py  init.py  install.py  ls.py  ls_url.py  move.py  open_repo.py  pull.py  push.py  remove.py  scm_context.py  stage.py  status.py  trie.py  update.py  worktree.py
dvx/run/: __init__.py  artifact.py  cli.py  dag.py  dvc.py  dvc_files.py  executor.py  hash.py  parser.py  repro.py  repro_cli.py  stage.py  status.py  viz.py
dvx/stage/: __init__.py  cache.py  decorators.py  exceptions.py  imports.py  loader.py  run.py  serialize.py  utils.py
dvx/testing/: README.rst  api_tests.py  fixtures.py  path_info.py  remote_tests.py  tmp_dir.py  workspace_tests.py
dvx/ui/: __init__.py  pager.py  table.py
dvx/utils/: __init__.py  cli_parse.py  collections.py  fs.py  hydra.py  packaging.py  strictyaml.py  threadpool.py
specs/: blob-audit-lineage.md  evictable-generated-blobs.md  fetch-schedule-croniter-required.md  hf-path-addressed-remote.md  run-push-includes-s3.md  side-effects-and-cron.md
specs/done/: add-skips-gitignore-update.md  co-output-concurrency-locked.md  co-output-push-half-blob.md  commit-push-config-and-ipc.md  configurable-user-agent.md  dep-path-shorthand.md  dir-co-output-push-missing.md  dir-push-shallow-existence-check.md  fix-dep-freshness-for-raw-files.md  fix-run-external-deps.md  fix-targeted-pull.md  foreign-s3-import.md  git-tracked-imports.md  http-import-last-modified.md  multi-output-stages.md  per-stage-commits-and-error-output.md  per-stage-push-gated-on-global.md  preserve-after-on-rewrite.md  pull-glob-regression.md  push-after-commit.md  recursive-run-discovery.md  relative-paths-in-dvc-files.md  run-auto-pull.md  run-push-includes-s3.md  run-should-cache-outputs.md  show-stage-output-on-success.md  side-effect-subdirectory-path.md  side-effects-and-cron.md  stage-ordering.md  stale-dep-hashes-after-run.md  trailing-slash-dvc-path.md  transitive-staleness.md  walk-upstream-overreach-when-direct-deps-fresh.md
src/dvx/: __init__.py  _compat.py  cache.py  cli.py  config.py  gc.py  git_import.py  repo.py  stage.py
tests/: __init__.py  conftest.py  scripts.py  test_cache.py  test_cli.py  test_config.py  test_diff.py  test_executor.py  test_gc.py  test_multi_output_stages.py  test_push_dir_gap_fill.py  test_run_artifact.py  test_run_dvc_files.py  test_run_hash.py  test_run_pull_deps.py  test_run_push_s3.py  test_s3_import.py  test_stage.py  test_status_thread_safety.py  test_transfer.py
tests/func/: test_add.py  test_cache_path.py  test_cat.py  test_check_ignore.py  (+32 more)
ui/: package.json  pnpm-lock.yaml
(+133 files in other folders)
