[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77", "setuptools_scm[toml]>=8"]

[project]
name = "dvx"
description = "Minimal data version control - content-addressable storage for data files"
readme = "README.rst"
keywords = [
    "data-science",
    "data-version-control",
    "git",
    "reproducibility",
]
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Dmitry Petrov", email = "dmitry@dvc.org" }]
maintainers = [{ name = "Ryan Williams" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]

dependencies = [
    "attrs>=22.2.0",
    "click>=8",
    "colorama>=0.3.9",
    "configobj>=5.0.9",
    "distro>=1.3",
    "dpath<3,>=2.1.0",
    "dulwich",
    "dvc-data>=3.16.2,<3.17",
    "dvc-http>=2.29.0",
    "dvc-objects",
    "flatten_dict<1,>=0.4.1",
    "flufl.lock>=8.1.0,<9",
    "fsspec>=2024.2.0",
    "funcy>=1.14",
    "networkx>=2.5",
    "packaging>=19",
    "pathspec>=0.10.3",
    "platformdirs<5,>=3.1.1",
    "psutil>=5.8",
    "pygtrie>=2.3.2",
    "pyparsing>=2.4.7",
    "requests>=2.22",
    "rich>=12",
    "ruamel.yaml>=0.17.11",
    "scmrepo>=3.5.2,<4",
    "shortuuid>=0.5",
    "shtab<2,>=1.3.4",
    "tabulate>=0.8.7",
    "tomlkit>=0.11.1",
    "tqdm<5,>=4.63.1",
    "voluptuous>=0.11.7",
    "zc.lockfile>=1.2.1",
]

[project.optional-dependencies]
all = ["dvx[azure,diff,gdrive,gs,hdfs,oss,s3,ssh,webdav,webhdfs]"]
azure = ["dvc-azure>=3.1.0,<4"]
gdrive = ["dvc-gdrive>=3,<4"]
gs = ["dvc-gs>=3.0.2,<4"]
hdfs = ["dvc-hdfs>=3,<4"]
oss = ["dvc-oss>=3,<4"]
s3 = ["dvc-s3>=3.2.1,<4"]
ssh = ["dvc-ssh>=4,<5"]
ssh_gssapi = ["dvc-ssh[gssapi]>=4,<5"]
webdav = ["dvc-webdav>=3.0.1,<4"]
webhdfs = ["dvc-webhdfs>=3.1,<4"]
webhdfs_kerberos = ["dvc-webhdfs[kerberos]>=3.1,<4"]
diff = ["dffs>=0.0.7"]
tests = [
    "beautifulsoup4>=4.4",
    "dvc-ssh",
    "filelock",
    "pytest>=7,<9",
    "pytest-benchmark[histogram]>=5,<6",
    "pytest-cov>=4.1.0",
    "pytest-docker>=1,<4",
    "pytest-mock",
    "pytest-rerunfailures<17.0",
    "pytest-test-utils",
    "pytest-timeout>=2",
    "pytest-xdist>=3.2",
    'pywin32>=225; sys_platform == "win32"',
    'tzdata; sys_platform == "win32"',
    "sqlalchemy>=1,<3",
    "pandas>=1",
    "uv",
]
dev = [
    "dvx[all,tests]",
    "mypy==1.19.1",
    "pandas-stubs",
    "types-colorama",
    "types-psutil",
    "types-pyinstaller",
    "types-requests",
    "types-tabulate",
    "types-toml",
    "types-tqdm",
    "typing-extensions",
]

[dependency-groups]
dev = ["dvx[all]", {include-group = "lint"}, {include-group = "test"}]
lint = [
    "mypy==1.19.1",
    "pandas-stubs",
    "types-colorama",
    "types-psutil",
    "types-pyinstaller",
    "types-requests",
    "types-tabulate",
    "types-toml",
    "types-tqdm",
    "typing-extensions",
]
test = [
    "beautifulsoup4>=4.4",
    "dvc-ssh",
    "filelock",
    "pytest>=7,<9",
    "pytest-benchmark[histogram]>=5,<6",
    "pytest-cov>=4.1.0",
    "pytest-docker>=1,<4",
    "pytest-mock",
    "pytest-rerunfailures<17.0",
    "pytest-test-utils",
    "pytest-timeout>=2",
    "pytest-xdist>=3.2",
    'pywin32>=225; sys_platform == "win32"',
    'tzdata; sys_platform == "win32"',
    "sqlalchemy>=1,<3",
    "pandas>=1",
    "uv",
]

[project.urls]
Issues = "https://github.com/runsascoded/dvx/issues"
Source = "https://github.com/runsascoded/dvx"

[project.scripts]
dvx = "dvx.cli.main:main"

[project.entry-points."fsspec.specs"]
dvx = "dvx.api:DVCFileSystem"

[project.entry-points."universal_pathlib.implementations"]
dvx = "dvx.fs.dvc_path:DVCPath"
# universal_pathlib does not support fsspec url chaining yet.
# see https://github.com/fsspec/universal_pathlib/issues/28.
"dvx+http" = "dvx.fs.dvc_path:DVCPath"
"dvx+https" = "dvx.fs.dvc_path:DVCPath"
"dvx+ssh" = "dvx.fs.dvc_path:DVCPath"

[project.entry-points."pyinstaller40"]
hook-dirs = "dvx.__pyinstaller:get_hook_dirs"
tests = "dvx.__pyinstaller:get_PyInstaller_tests"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
namespaces = false

[tool.setuptools_scm]
write_to = "dvx/_version.py"

[tool.pytest.ini_options]
addopts = "-ra --cov-config pyproject.toml"
filterwarnings = [
    "error::ResourceWarning",
    "error::pytest.PytestUnraisableExceptionWarning",
    "error::pytest_mock.PytestMockWarning",
    # https://github.com/boto/botocore/issues/2744
    "ignore:'urllib3.contrib.pyopenssl' module is deprecated:DeprecationWarning",
    # google.cloud: https://github.com/googleapis/python-storage/issues/1000
    # google.logging: https://github.com/googleapis/python-logging/issues/730
    # Also happens with `zc.lockfile`.
    "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning",
    # see https://github.com/networkx/networkx/issues/5723.
    "ignore:nx.nx_pydot.* depends on the pydot package, which has.*known issues and is not actively maintained:DeprecationWarning",
    # TODO: investigate where we are not closing sqlite3.Connection
    "ignore:unclosed database.*sqlite3.Connection:ResourceWarning",
    "ignore:unclosed.*<socket.socket:ResourceWarning",
]
markers = [
    "needs_internet: Might need network access for the tests",
    "studio: Tests verifying contract between DVC and Studio",
    "vscode: Tests verifying contract between DVC and VSCode plugin",
]
testpaths = ["tests"]
xfail_strict = true

[tool.coverage.run]
branch = true
source = ["dvx", "tests"]

[tool.coverage.paths]
source = ["dvx"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
]
show_missing = true

[tool.mypy]
check_untyped_defs = true
files = ["dvc"]
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict_equality = true
extra_checks = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "agate.*",
    "celery.*",
    "configobj.*",
    "dpath.*",
    "distro",
    "dvc_http",
    "dvc_render.*",
    "dvc_ssh",
    "dvc_studio_client.*",
    "flatten_dict",
    "fsspec.*",
    "funcy.*",  # https://github.com/Suor/funcy/issues/106,
    "grandalf.*",
    "ipdb",
    "iterative_telemetry",
    "kombu.*",
    "networkx.*",  # https://github.com/networkx/networkx/issues/3988
    "pygtrie.*",
    "pyinstrument",
    "pyparsing",
    "pytest_benchmark.*",
    "pytest_docker.plugin",
    "ruamel.*",
    "ruamel.yaml.*",
    "shortuuid",
    "shtab",
    "upath",
    "virtualenv",
    "viztracer",
    "voluptuous",
    "yappi",
    "zc.*",
]

[tool.codespell]
ignore-words-list = "ba,datas,fo,uptodate,cachable,falsy"
skip = "CODE_OF_CONDUCT.md"

[tool.ruff]
output-format = "full"
show-fixes = true
exclude = ["dvx/_version.py"]

[tool.ruff.lint]
ignore = [
    "PERF203", # try-except-in-loop
    "PLC0415",  # import-outside-top-level
    "PLR2004", # magic-value-comparison
    "PLW2901", # redefined-loop-name
    "S101", # assert
    "SIM105", # suppressible-exception
    "SIM108",  # if-else-block-instead-of-if-exp
    "SIM117", # multiple-with-statements
    "TRY003", # raise-vanilla-args
    "TRY300", # try-consider-else
]
select = [
    "F", "E", "W", "C90", "I", "N", "UP", "YTT", "ASYNC", "S", "BLE", "B", "A", "C4", "DTZ", "T10",
    "EXE", "ISC", "ICN", "LOG", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET",
    "SLOT", "SIM", "TID", "TC", "ARG", "PGH", "PLC", "PLE", "PLR", "PLW", "TRY",
    "FLY", "PERF", "FURB", "RUF", "RUF027", "RUF029", "RUF036",
]
preview = true
explicit-preview-rules = true

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "csv"
raises-extend-require-match-for = ["dvc.exceptions.DvcException", "dvc.scm.SCMError", "scmrepo.exceptions.SCMError"]

[tool.ruff.lint.flake8-tidy-imports]
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"funcy.cached_property" = {msg = "use `from dvc.utils.objects import cached_property` instead."}

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
known-first-party = ["dvc", "dvc_*", "tests"]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["M", "SCM"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.per-file-ignores]
"dvc/commands/**" = ["N806"]
"dvc/testing/**" = ["ARG002"]
"dvc/testing/benchmarks/**" = ["ARG001"]
"tests/**" = ["S", "ARG001", "ARG002", "TRY002", "TRY301", "PERF", "PLR2004"]
