[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dvx"
description = "Minimal data version control - a lightweight wrapper around DVC"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Ryan Williams", email = "ryan@runsascoded.com" }]
keywords = ["data", "version-control", "dvc", "machine-learning", "reproducibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Version Control",
]
requires-python = ">=3.10"
dynamic = ["version"]

dependencies = [
    "click>=8.0",
    "dffs>=0.1.1",
    "dvc>=3.50",
]

[project.optional-dependencies]
# Storage backends - install as needed
s3 = ["dvc-s3"]
gs = ["dvc-gs"]
azure = ["dvc-azure"]
ssh = ["dvc-ssh"]
hdfs = ["dvc-hdfs"]
webdav = ["dvc-webdav"]
webhdfs = ["dvc-webhdfs"]
oss = ["dvc-oss"]
# All remotes
all = [
    "dvc-s3",
    "dvc-gs",
    "dvc-azure",
    "dvc-ssh",
    "dvc-hdfs",
    "dvc-webdav",
    "dvc-webhdfs",
    "dvc-oss",
]
# Development
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
dvx = "dvx.cli:main"

[project.urls]
Homepage = "https://github.com/runsascoded/dvx"
Repository = "https://github.com/runsascoded/dvx"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/dvx/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dvx"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
